<resources>
    <string name="Application_and_notify">Invitation and notification</string>
    <string name="Current_version">Current version</string>
    <string name="Empty_the_chat_record">Clear conversation</string>
    <string name="Exit_the_group_chat">Exit the group</string>
    <string name="Group_chat">Group chat</string>
    <string name="Group_chat_information">The group description</string>
    <string name="Group_chat_profile">Group profile</string>
    <string name="Group_of_Lord">The group owner</string>
    <string name="Hands_free">Handsfree</string>
    <string name="Introduction">Brief</string>
    <string name="Not_Set">Not set</string>
    <string name="Open_group_chat">Public groups</string>
    <string name="Open_group_members_invited">Allow members to invite</string>
    <string name="Please_enter_a_username">Please enter a username</string>
    <string name="Select_the_contact">Select the contact</string>
    <string name="Shielding_of_the_message">Block message</string>
    <string name="The_new_group_chat">Create new group</string>
    <string name="To_join_the_chat">Join the group</string>
    <string name="Upload_the_log">Uploading the log</string>
    <string name="Whether_the_public">Is public</string>
    <string name="add_friend">Add friends</string>
    <string name="address_book">Address book</string>
    <string name="agree">Agree</string>
    <string name="answer">Answer</string>
    <string name="attach_file">File</string>
    <string name="attach_location">Location</string>
    <string name="attach_picture">Image</string>
    <string name="attach_smile">Emoticon</string>
    <string name="attach_take_pic">Capture</string>
    <string name="attach_voice_call">Voice call</string>
    <string name="back">Back</string>
    <string name="black_item">Black list</string>
    <string name="blacklist">Black list</string>
    <string name="book_black">Black list</string>
    <string name="button_add">Add</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_logout">Logout</string>
    <string name="button_pushtotalk">Hold to talk</string>
    <string name="button_save">Save</string>
    <string name="button_search">Find</string>
    <string name="button_send">Send</string>
    <string name="button_uploadlog">Upload the log</string>
    <string name="cancel">Cancel</string>
    <string name="chatset">Chat settings</string>
    <string name="clear_all_records">Clear all conversations？</string>
    <string name="clear_records">Clear conversation?</string>
    <string name="confirm_forward_to">Confirm to forward to：%1$s ?</string>
    <string name="confirm_resend">Confirm to resend？</string>
    <string name="confirmpassword">Confirm password</string>
    <string name="connect_conflict">The same account was loggedin in other device</string>
    <string name="connect_failuer_toast">Please check the network or try again later</string>
    <string name="copy">Copy</string>
    <string name="copy_message">Copy message</string>
    <string name="delete">Delete</string>
    <string name="delete_message">Delete message</string>
    <string name="delete_video">Delete video</string>
    <string name="delete_voice">Delete voice</string>
    <string name="diagnose">Diagnose</string>
    <string name="dismiss_group">Dismiss group</string>
    <string name="dissolution_group_hint">The group will be dismissed after exiting</string>
    <string name="downwaiting">Downloading the file, please try again later</string>
    <string name="ease_user_remove">This user has been removed</string>
    <string name="exit_group">Exit</string>
    <string name="exit_group_hint">The group messages will not be received after exiting the group</string>
    <string name="file">[file]</string>
    <string name="forward">Forward</string>
    <string name="group_chat">Group chat</string>
    <string name="group_name">Group name</string>
    <string name="hang_up">Hang up</string>
    <string name="is_down_please_wait">Downloading video, please try again later</string>
    <string name="location_message">The location information</string>
    <string name="location_prefix">[my location]</string>
    <string name="location_recv">[%1$s location]</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="logout_hint">Logout will never clear the chat history, this account can be used on next login</string>
    <string name="move_up_to_cancel">Finger up to cancel sending</string>
    <string name="mute">Mute</string>
    <string name="network_isnot_available">The network is not available</string>
    <string name="network_unavailable">The network connection is not available, please check the network</string>
    <string name="newchat">Create new group</string>
    <string name="newnotify">Receiving a new message</string>
    <string name="not_download">Did not download:</string>
    <string name="notify">New message notification</string>
    <string name="now_refresh_list">Loading data</string>
    <string name="password">Password</string>
    <string name="picture">[Picture]</string>
    <string name="prompt">Prompt</string>
    <string name="recoding_fail">The recording failure, please try again！</string>
    <string name="recording_video">Record video</string>
    <string name="register">Register</string>
    <string name="release_to_cancel">Finger release to cancel sending</string>
    <string name="resend">Resend</string>
    <string name="save">Save</string>
    <string name="search">Search</string>
    <string name="search_header">Search</string>
    <string name="select_contacts">Select the contact</string>
    <string name="send_fail">Send failed</string>
    <string name="session">Conversation</string>
    <string name="set">Settings</string>
    <string name="setting">Settings</string>
    <string name="shake">Vibrate</string>
    <string name="text_ack_msg">Read</string>
    <string name="text_delivered_msg">Delivered</string>
    <string name="unable_to_connect">Unable to connect to the server</string>
    <string name="user_card">Business card</string>
    <string name="user_name">User name</string>
    <string name="video">[Video]</string>
    <string name="voice">Sounds</string>
    <string name="voice_call">[Voice call]</string>
    <string name="yangshengqi">Use speaker</string>
    <string name="Add_a_button_was_clicked">Add a button was clicked</string>
    <string name="Add_a_friend">Let me to be your friend!</string>
    <string name="Add_group_members_fail">Add group members fail:</string>
    <string name="Agree_with_failure">Failed to accept</string>
    <string name="Agreed_to_your_group_chat_application">Accepted your group application</string>
    <string name="Apply_to_the_group_of">Apply to join the group</string>
    <string name="Are_agree_with">Accepting</string>
    <string name="Are_connected_to_each_other">Connecting to peer..</string>
    <string name="Are_logged_out">Logging out</string>
    <string name="Are_moving_to_blacklist">Moving to blacklist</string>
    <string name="Are_removed">Removing</string>
    <string name="Cant_chat_with_yourself">cannot chat with yourself</string>
    <string name="Change_the_group_name">Change group name</string>
    <string name="Confirm_password_cannot_be_empty">Confirm password cannot be empty!</string>
    <string name="Connection_failure">Connection failed!</string>
    <string name="Delete_failed">Failed to delete</string>
    <string name="Delete_the_contact">Delete the contact</string>
    <string name="Did_not_download">Not yet downloaded</string>
    <string name="Dissolve_group_chat_tofail">Failed to dismiss the group:</string>
    <string name="Download_the_pictures">Download the pictures: 0%</string>
    <string name="Download_the_pictures_new">Download the pictures:</string>
    <string name="Exit_the_group_chat_failure">Failed to exit the group:</string>
    <string name="Failed_to_create_groups">Failed to create groups</string>
    <string name="Failed_to_download_file">Failed to download file:</string>
    <string name="Failed_to_get_group_chat_information">Failed to get group information:</string>
    <string name="Failed_to_join_the_group_chat">Failed to join the group</string>
    <string name="File_does_not_exist">File does not exist</string>
    <string name="Group_name_cannot_be_empty">Group name cannot be empty</string>
    <string name="Has_agreed_to">Accepted</string>
    <string name="Has_agreed_to_your_friend_request">Accepted your request</string>
    <string name="Has_been_cancelled">Cancelled</string>
    <string name="Has_refused_to">Refused</string>
    <string name="Have_downloaded">Already downloaded</string>
    <string name="In_the_call">In the call..</string>
    <string name="Into_the_blacklist">Move to the blacklist?</string>
    <string name="Invite_you_to_join_a_group_chat">Invite you to join this group</string>
    <string name="Is_download_voice_click_later">Downloading the voice message, click later</string>
    <string name="Is_landing">logining..</string>
    <string name="Is_moved_into_blacklist">Moving to blacklist..</string>
    <string name="Is_not_yet_connected_to_the_server">Not connect to server</string>
    <string name="Is_sending_a_request">Sending the request..</string>
    <string name="Is_the_registered">Registering..</string>
    <string name="Is_to_create_a_group_chat">Creating the group</string>
    <string name="Is_unblock">Unblocking group</string>
    <string name="Join_the_group_chat">Join the group</string>
    <string name="Log_Upload_failed">Failed to upload the log</string>
    <string name="Log_uploaded_successfully">Log was uploaded successfully</string>
    <string name="Login_failed">Login failed:</string>
    <string name="Logoff_notification">Logoff notification</string>
    <string name="Making_sure_your_location">Making sure your location..</string>
    <string name="Modify_the_group_name_successful">Modify the group name successful</string>
    <string name="Move_into_blacklist_failure">Move into blacklist failure</string>
    <string name="Move_into_blacklist_success">Move into blacklist success</string>
    <string name="Move_into_the_blacklist_new">Move into the blacklist</string>
    <string name="Network_error">Network error</string>
    <string name="Open_the_equipment_failure">Open the equipment failure!</string>
    <string name="Password_cannot_be_empty">Password cannot be empty!</string>
    <string name="Recording_without_permission">Recording without permission</string>
    <string name="Refused">Refused</string>
    <string name="Registered_successfully">Registered successfully</string>
    <string name="Registration_failed">Registration failed:</string>
    <string name="Remove_the_notification">Remove the notification</string>
    <string name="Removed_from_the_failure">Removed fail</string>
    <string name="Request_add_buddy_failure">Request add buddy failure:</string>
    <string name="Request_to_add_you_as_a_friend">You got a friend request</string>
    <string name="Request_to_join">Apply to join</string>
    <string name="Send_the_following_pictures">Send the following pictures?</string>
    <string name="Send_voice_need_sdcard_support">Send voice need sdcard support</string>
    <string name="Sync_Groups_From_Server">Sync groups with server</string>
    <string name="The_delete_button_is_clicked">The delete button is clicked</string>
    <string name="The_file_is_not_greater_than_10_m">The file is not greater than 10 m</string>
    <string name="The_other_is_hang_up">The peer has ended the call</string>
    <string name="The_other_is_not_online">The peer is not online</string>
    <string name="group_id">Group ID</string>
    <string name="group_nick">Group Nickname:</string>
    <string name="group_owner">Group Owner:</string>
    <string name="serach_group_message">Search messages</string>
</resources>