<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/login_reg_bg"
    android:fitsSystemWindows="true"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0.0dip"
        android:layout_weight="0.4">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0.0dip"
        android:layout_weight="1.0">
        <RelativeLayout
            android:id="@id/rl_username"
            android:background="#ffffffff"
            android:layout_width="fill_parent"
            android:layout_height="54.0dip"
            android:layout_marginLeft="28.0dip"
            android:layout_marginRight="28.0dip">
            <ImageView
                android:id="@id/iv_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10.0dip"
                android:src="@drawable/icon_account"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true" />
            <EditText
                android:textSize="18.0sp"
                android:textColor="#ff000000"
                android:id="@id/username"
                android:background="@null"
                android:paddingLeft="10.0dip"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:hint="@string/user_name"
                android:singleLine="true"
                android:drawableRight="@drawable/icon_account"
                android:layout_centerVertical="true" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@id/rl_password"
            android:background="#ffffffff"
            android:layout_width="fill_parent"
            android:layout_height="54.0dip"
            android:layout_marginLeft="28.0dip"
            android:layout_marginTop="10.0dip"
            android:layout_marginRight="28.0dip"
            android:layout_below="@id/rl_username">
            <ImageView
                android:id="@id/iv_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10.0dip"
                android:src="@drawable/icon_lock"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true" />
            <EditText
                android:textSize="18.0sp"
                android:id="@id/password"
                android:background="@null"
                android:paddingLeft="10.0dip"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:hint="@string/password"
                android:singleLine="true"
                android:layout_centerVertical="true"
                android:inputType="textPassword" />
        </RelativeLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30.0dip"
            android:layout_marginTop="30.0dip"
            android:layout_marginRight="30.0dip"
            android:layout_below="@id/rl_password">
            <Button
                android:textSize="18.0sp"
                android:textColor="@android:color/black"
                android:gravity="center"
                android:background="@drawable/em_button_register_bg"
                android:paddingTop="7.0dip"
                android:paddingBottom="7.0dip"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10.0dip"
                android:layout_marginRight="10.0dip"
                android:text="@string/register"
                android:layout_weight="1.0"
                android:onClick="register" />
            <Button
                android:textSize="18.0sp"
                android:textColor="@android:color/white"
                android:gravity="center"
                android:background="@drawable/em_button_login_bg"
                android:paddingTop="7.0dip"
                android:paddingBottom="7.0dip"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10.0dip"
                android:layout_marginRight="10.0dip"
                android:text="@string/login"
                android:layout_weight="1.0"
                android:onClick="login" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>